--- a/web/app/src/app/app.component.html
+++ b/web/app/src/app/app.component.html
@@ -5,55 +5,65 @@
         <mat-icon>menu</mat-icon>&nbsp;&nbsp;&nbsp;
       </button>
       <img routerLink="/" style="height: 100%" src="./assets/logo.png" />
-      <span routerLink="/" style="font-size: 1.5em; font-weight: 600">&nbsp; Micro</span>
+      <span routerLink="/" style="font-size: 1.5em; font-weight: 600"
+        >&nbsp; Micro</span
+      >
       <span class="menu-spacer"></span>
       <div style="padding-top: 4px;" fxShow="true" fxHide.lt-md>
         <!-- The following menu items will be hidden on both SM and XS screen sizes -->
-        <a href="/about" mat-button>About</a>
-        <a href="/blog" mat-button>Blog</a>
-        <a href="#" mat-button>Docs</a>
-        <a href="#" mat-button>Explore</a>
-        <a href="#" mat-button>Slack</a>
-        <a href="#" mat-button>Tools</a>
-      
+        <a href="https://micro.mu" mat-button>Main Micro Website</a>
+        <a routerLink="/services" mat-button>Services</a>
+        <a href="https://micro.mu/community" mat-button>Slack</a>
+
         <mat-menu #menu="matMenu">
-          <button class="logout" id="logout" *ngIf="user && user.name" mat-menu-item (click)="us.logout()">
+          <button
+            class="logout"
+            id="logout"
+            *ngIf="user && user.name"
+            mat-menu-item
+            (click)="us.logout()"
+          >
             <mat-icon style="color: #F44336">power_settings_new</mat-icon>
             Logout&nbsp;&nbsp;&nbsp;&nbsp;
           </button>
         </mat-menu>
         <span fxHide="false" fxHide.lt-md>
-          <button *ngIf="user && user.name" mat-button [matMenuTriggerFor]="menu" class="dropdown-menu" id="dropdown-menu">
-              {{user.name}}
+          <button
+            *ngIf="user && user.name"
+            mat-button
+            [matMenuTriggerFor]="menu"
+            class="dropdown-menu"
+            id="dropdown-menu"
+          >
+            {{ user.name }}
             <mat-icon>keyboard_arrow_down</mat-icon>
           </button>
-  
+
           <ng-container *ngIf="!us.loggedIn() || !user || !user.name">
             <a routerLink="/login" color="accent" mat-raised-button>Login</a>
           </ng-container>
         </span>
-  
+
         <span fxHide="false" fxHide.gt-sm>
-          <button style="padding-right: 0; margin-right: 0;" mat-button [matMenuTriggerFor]="menu">
+          <button
+            style="padding-right: 0; margin-right: 0;"
+            mat-button
+            [matMenuTriggerFor]="menu"
+          >
             <mat-icon style="color: white">dehaze</mat-icon>
           </button>
         </span>
-        
-  
       </div>
     </mat-toolbar-row>
   </mat-toolbar>
 
   <mat-sidenav-container style="height: 100%" fxFlexFill>
-    <mat-sidenav style="width: 100px" #sidenav>
+    <mat-sidenav style="width: 30%" #sidenav>
       <mat-nav-list>
-        <div><a (click)="sidenav.toggle()" href="" mat-list-item>Close</a></div>
-        <div><a href="#" mat-button>About</a></div>
-        <div><a href="#" mat-button>Blog</a></div>
-        <div><a href="#" mat-button>Docs</a></div>
-        <div><a href="#" mat-button>Explore</a></div>
-        <div><a href="#" mat-button>Slack</a></div>
-        <div><a href="#" mat-button>Tools</a></div>
+        <div><a (click)="sidenav.toggle()" mat-list-item>Close</a></div>
+        <div><a href="https://micro.mu" mat-button>Main Micro Website</a></div>
+        <div><a routerLink="/services" mat-button>Services</a></div>
+        <div><a href="https://micro.mu/community" mat-button>Slack</a></div>
       </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content style="padding: 1em; background: white;" fxFlexFill>
