UI & UX adjusments (#21)

--- a/web/app/src/app/app.component.html
+++ b/web/app/src/app/app.component.html
@@ -5,7 +5,7 @@
         <mat-icon>menu</mat-icon>&nbsp;&nbsp;&nbsp;
       </button>
       <img routerLink="/" style="height: 100%" src="./assets/logo.png" />
-      <span routerLink="/" style="font-size: 1.5em; font-weight: 600"
+      <span id="logo" routerLink="/"
         >&nbsp; Micro</span
       >
       <span class="menu-spacer"></span>
