--- a/web/app/src/app/app.component.css
+++ b/web/app/src/app/app.component.css
@@ -14,3 +14,10 @@ mat-menu-content:not(:empty) {
   padding-top: 0px;
   padding-bottom: 0px;
 }
+
+#logo {
+  font-size: 2em;
+  font-weight: 1000;
+  font-family: medium-content-sans-serif-font, "Lucida Grande",
+    "Lucida Sans Unicode", "Lucida Sans", Geneva, Arial, sans-serif;
+}
