--- a/web/app/src/app/new-service/new-service.component.html
+++ b/web/app/src/app/new-service/new-service.component.html
@@ -1,10 +1,10 @@
 <div style="padding-left: 1em; margin: auto;">
   <mat-card class="mat-card-flat">
     <mat-card-title>
-      <a routerLink="/services">services</a> &gt;
+      <a routerLink="/services">services</a> &gt; go.micro.srv.
 
       <mat-form-field style="padding-top: 0em; margin-top: 0em; width: 9em;">
-        <input matInput [(ngModel)]="serviceName" (ngModelChange)="newCode()" />
+        <input autofocus matInput [(ngModel)]="serviceName" (ngModelChange)="newCode()" />
       </mat-form-field>
     </mat-card-title>
   </mat-card>
