--- a/web/app/src/app/service/service.component.html
+++ b/web/app/src/app/service/service.component.html
@@ -167,7 +167,32 @@
       </mat-tab>
       <mat-tab label="Nodes">
         <br />
-        Nodes coming soon.
+        <ng-template matTabContent>
+          <br />
+          <div fxLayout="row">
+            <div style="width: 50%">
+              <b style="font-weight: 700;">Name</b>
+            </div>
+            <div style="width: 50%">
+              <b style="font-weight: 700;">Address</b>
+            </div>
+          </div><br />
+          <ng-container *ngFor="let node of services[0].nodes">
+            <div fxLayout="row">
+              <div style="width: 50%">
+                {{ node.id }}
+              </div>
+              <div style="width: 50%">
+                {{ node.address }}
+              </div>
+            </div>
+            <div style="width: 100%; padding-top: 1em; margin-bottom: 1em;">
+              <pre style="padding: 1em; background: #f3f3f3;"
+                >{{ metadata(node) }}</pre
+              >
+            </div>
+          </ng-container>
+        </ng-template>
       </mat-tab>
       <mat-tab label="Trace">
         <ng-template matTabContent>
@@ -185,7 +210,7 @@
             <div style="width: 25%">
               <b style="font-weight: 700;">Duration</b>
             </div>
-          </div>
+          </div><br />
           <ng-container *ngFor="let traceData of traceDatasPart">
             <div fxLayout="row">
               <div style="width: 25%">
