--- a/web/app/src/app/events/events.component.html
+++ b/web/app/src/app/events/events.component.html
@@ -1,5 +1,5 @@
-<div *ngIf="events" style="padding-left: 1em; margin: auto;">
-  <mat-card class="mat-card-flat">
+<div *ngIf="events" style="margin: auto;">
+  <mat-card style="margin-top: 0em; padding-top: 0em;" class="mat-card-flat">
     <mat-card-title>
       events
     </mat-card-title>
@@ -8,15 +8,20 @@
       *ngFor="let event of events"
       style="margin-bottom: 1em; background: #f5f5f5;"
     >
-      <mat-card-title
-        style="display: flex; align-items: center; font-size: 1.25em;"
-      >
-        <a routerLink="/service/{{ event.service.name }}"
-          >{{ event.service.name }}:</a
-        >
-        &nbsp;{{ eventTypeToString(event) }} &nbsp;<span style="color: #555">{{
-          event.timestamp * 1000 | dateAgo
-        }}</span>
+      <mat-card-title style="align-items: center; font-size: 1.25em;">
+        <div fxLayout.lt-md="column" fxLayout="row">
+          <div>
+            <a routerLink="/service/{{ event.service.name }}"
+              >{{ event.service.name }}:</a
+            > &nbsp;
+          </div>
+          <div>
+           {{ eventTypeToString(event) }} &nbsp;<span
+              style="color: #555"
+              >{{ event.timestamp * 1000 | dateAgo }}</span
+            >
+          </div>
+        </div>
       </mat-card-title>
     </mat-card>
     <br />
