--- a/web/app/src/app/new-service/new-service.component.html
+++ b/web/app/src/app/new-service/new-service.component.html
@@ -1,5 +1,5 @@
-<div style="padding-left: 1em; margin: auto;">
-  <mat-card class="mat-card-flat">
+<div style="margin: auto;">
+  <mat-card style="margin-bottom: 0; padding-bottom: 0; margin-top: 0em; padding-top: 0em;" class="mat-card-flat">
     <mat-card-title>
       <a routerLink="/services">services</a> &gt; go.micro.srv.
 
