--- a/web/app/src/app/settings/settings.component.html
+++ b/web/app/src/app/settings/settings.component.html
@@ -1,8 +1,8 @@
-<div style="padding-left: 1em; margin: auto;">
-  <mat-card class="mat-card-flat">
+<div style="margin: auto;">
+  <mat-card style="margin-top: 0; padding-top: 0;" class="mat-card-flat">
     <mat-card-title>settings > tokens</mat-card-title>
-    <div fxLayout="row" fxLayoutAlign="space-between" style="margin-top: 2em;">
-      <div fxFlex="23%">
+    <div fxLayout.lt-md="column" fxLayout="row" fxLayoutAlign="space-between" style="margin-top: 2em;">
+      <div fxFlex="23%" style="margin-bottom: 1em;">
         <mat-toolbar style="font-size:1em;">
           <mat-toolbar-row>
             <a routerLink="/settings/tokens"><span>> Tokens</span></a>
