--- a/web/app/src/app/service/service.component.html
+++ b/web/app/src/app/service/service.component.html
@@ -2,7 +2,7 @@
   <mat-spinner
     [diameter]="70"
     style="margin: auto;"
-  *ngIf="!services"
+    *ngIf="!services"
   ></mat-spinner>
 </div>
 <div *ngIf="services" style="margin: auto;">
@@ -50,90 +50,14 @@
     >
       <mat-tab style="padding-top: 1em;" label="Endpoints">
         <br />
-        <form style="margin-left: 1.5em;" class="example-form">
-          <mat-form-field class="example-full-width">
-            <input
-              name="query"
-              matInput
-              [(ngModel)]="endpointQuery"
-              placeholder="Search endpoints"
-            />
-          </mat-form-field>
-        </form>
-        <ng-container *ngFor="let service of pickVersion(services)">
-          <div
-            *ngFor="
-              let endpoint of service.endpoints | search: 'name':endpointQuery
-            "
-          >
-            <div>
-              <mat-expansion-panel class="mat-elevation-z0">
-                <mat-expansion-panel-header>
-                  <mat-panel-title>
-                    {{ endpoint.name }}
-                  </mat-panel-title>
-                  <mat-panel-description>
-                    {{ endpoint.title }}
-                  </mat-panel-description>
-                </mat-expansion-panel-header>
-                <mat-tab-group animationDuration="0ms">
-                  <mat-tab label="Definition">
-                    <ng-template matTabContent>
-                      <br />
-                      <pre style="padding: 1em; background: #f6f6f6;">{{
-                        valueToString(endpoint.request, 1)
-                      }}</pre>
-                      <br />
-                      <pre style="padding: 1em; background: #f6f6f6;">{{
-                        valueToString(endpoint.response, 1)
-                      }}</pre>
-                    </ng-template>
-                  </mat-tab>
-                  <mat-tab label="Call">
-                    <ng-template matTabContent>
-                      <br />
-                      <div
-                        fxLayout.lt-md="column"
-                        fxLayout="row"
-                        fxLayoutGap="1em"
-                      >
-                        <div fxFlex="calc(50% - 0.5em)">
-                          Request<br /><br />
-                          <ngx-monaco-editor
-                            style="height: 25em"
-                            [options]="coptions"
-                            [(ngModel)]="endpoint.requestJSON"
-                          ></ngx-monaco-editor>
-                        </div>
-                        <div fxFlex="calc(50% - 0.5em)">
-                          Response<br /><br />
-                          <ngx-monaco-editor
-                            style="height: 25em"
-                            [options]="coptions"
-                            [(ngModel)]="endpoint.responseJSON"
-                          ></ngx-monaco-editor>
-                        </div>
-                      </div>
-                      <br />
-                      <button
-                        mat-raised-button
-                        (click)="callEndpoint(service, endpoint)"
-                        color="primary"
-                      >
-                        Call
-                      </button>
-                    </ng-template>
-                  </mat-tab>
-                </mat-tab-group>
-              </mat-expansion-panel>
-            </div>
-            <br />
-          </div>
-        </ng-container>
+        <app-endpoint-list
+          [services]="services"
+          [endpointQuery]="endpointQuery"
+          [selectedVersion]="selectedVersion"
+        ></app-endpoint-list>
       </mat-tab>
       <mat-tab label="Logs">
-        <pre>
-            <div *ngFor="let log of logs">{{ log.message }}</div></pre>
+        <app-logs [logs]="logs"></app-logs>
       </mat-tab>
       <mat-tab label="Stats">
         <ng-template matTabContent>
@@ -144,158 +68,29 @@
             >
           </div>
           <br />
-          <div
- 
-            fxLayout.lt-md="column wrap"
-            fxLayout="row wrap"
-            fxLayoutAlign="space-between"
-          >
-            <div style="margin-bottom: 2em;">
-              <canvas fxFlex.lt-md="100%" fxFlex="48%"
-                *ngIf="requestRates.data.length > 0"
-                baseChart
-                [colors]="requestRates.chartColors"
-                [datasets]="requestRates.data"
-                [options]="requestRates.options"
-                [chartType]="requestRates.lineChartType"
-              ></canvas>
-            </div>
-            <div fxFlex="48%" style="margin-bottom: 2em; ">
-              <canvas
-                *ngIf="errorRates.data.length > 0"
-                baseChart
-                [colors]="errorRates.chartColors"
-                [datasets]="errorRates.data"
-                [options]="errorRates.options"
-                [chartType]="errorRates.lineChartType"
-              ></canvas>
-            </div>
-            <div fxFlex="48%" style="margin-bottom: 2em; ">
-              <canvas
-                *ngIf="memoryRates.data.length > 0"
-                baseChart
-                [colors]="memoryRates.chartColors"
-                [datasets]="memoryRates.data"
-                [options]="memoryRates.options"
-                [chartType]="memoryRates.lineChartType"
-              ></canvas>
-            </div>
-            <div fxFlex="48%" style="margin-bottom: 2em; ">
-              <canvas
-                *ngIf="concurrencyRates.data.length > 0"
-                baseChart
-                [colors]="concurrencyRates.chartColors"
-                [datasets]="concurrencyRates.data"
-                [options]="concurrencyRates.options"
-                [chartType]="concurrencyRates.lineChartType"
-              ></canvas>
-            </div>
-            <div fxFlex="48%" style="margin-bottom: 2em; ">
-              <canvas
-                *ngIf="gcRates.data.length > 0"
-                baseChart
-                [colors]="gcRates.chartColors"
-                [datasets]="gcRates.data"
-                [options]="gcRates.options"
-                [chartType]="gcRates.lineChartType"
-              ></canvas>
-            </div>
-            <div fxFlex="48%" style="margin-bottom: 2em;">
-              <canvas
-                *ngIf="uptime.data.length > 0"
-                baseChart
-                [colors]="uptime.chartColors"
-                [datasets]="uptime.data"
-                [options]="uptime.options"
-                [chartType]="uptime.lineChartType"
-              ></canvas>
-            </div>
-          </div>
+          <app-stat-charts [stats]="stats"></app-stat-charts>
         </ng-template>
       </mat-tab>
       <mat-tab label="Nodes">
         <br />
         <ng-template matTabContent>
           <br />
-          <div fxLayout="row">
-            <div style="width: 50%">
-              <b style="font-weight: 700;">Name</b>
-            </div>
-            <div style="width: 50%">
-              <b style="font-weight: 700;">Address</b>
-            </div>
-          </div>
-          <br />
-          <ng-container *ngFor="let node of services[0].nodes">
-            <div fxLayout="row">
-              <div style="width: 50%">
-                {{ node.id }}
-              </div>
-              <div style="width: 50%">
-                {{ node.address }}
-              </div>
-            </div>
-            <div style="width: 100%; padding-top: 1em; margin-bottom: 1em;">
-              <pre style="padding: 1em; background: #f3f3f3;">{{
-                metadata(node)
-              }}</pre>
-            </div>
-          </ng-container>
+          <app-nodes [services]="services"></app-nodes>
         </ng-template>
       </mat-tab>
       <mat-tab label="Trace">
         <ng-template matTabContent>
           <br />
-          <div fxLayout="row">
-            <div style="width: 25%">
-              <b style="font-weight: 700;">ID</b>
-            </div>
-            <div style="width: 25%">
-              <b style="font-weight: 700;">Name</b>
-            </div>
-            <div style="width: 25%">
-              <b style="font-weight: 700;">Time</b>
-            </div>
-            <div style="width: 25%">
-              <b style="font-weight: 700;">Duration</b>
-            </div>
-          </div>
+          <app-trace-list
+            [serviceName]="services[0].name"
+            [spans]="traceSpans"
+          ></app-trace-list>
+        </ng-template>
+      </mat-tab>
+      <mat-tab label="Events">
+        <ng-template matTabContent>
           <br />
-          <ng-container *ngFor="let traceData of traceDatasPart">
-            <div fxLayout="row">
-              <div style="width: 25%">
-                <a href="#" (click)="show(traceData)"
-                  >{{ prettyId(traceData.traceId) }}
-                </a>
-              </div>
-              <div style="width: 25%">
-                {{ getEndpointName(services[0], traceData.dataTable) }}
-              </div>
-              <div style="width: 25%">
-                {{ traceData.dataTable[1][2] | date: "short" }}
-              </div>
-              <div style="width: 25%">
-                {{ traceDuration(traceData.dataTable) }}
-              </div>
-            </div>
-            <div
-              *ngIf="traceData.show"
-              style="width: 100%;"
-              [ngStyle]="{ 'height.px': traceData.divHeight }"
-            >
-              <br />Trace ID: {{ traceData.traceId }}<br />
-              <google-chart [data]="traceData"></google-chart>
-            </div>
-          </ng-container>
-          <mat-paginator
-            #paginator
-            [length]="length"
-            [pageIndex]="currentPage"
-            [pageSize]="pageSize"
-            [pageSizeOptions]="[5, 10, 25, 100]"
-            (page)="handlePage($event)"
-          >
-          </mat-paginator>
+          <app-events-list [events]="events"></app-events-list>
         </ng-template>
       </mat-tab>
     </mat-tab-group>
