Copyable code block and other styling changes (#61)
* New service and settings code and copy code improvements

* Rebuild

* Remove test cruft

--- a/web/app/src/app/new-service/new-service.component.html
+++ b/web/app/src/app/new-service/new-service.component.html
@@ -4,39 +4,64 @@
     class="mat-card-flat"
   >
     <mat-card-title>
-      <a routerLink="/services">services</a> &gt; go.micro.srv.
+      <a routerLink="/services">Services</a> &gt; go.micro.srv.<span
+        *ngIf="step > 0"
+        >{{ serviceName }}</span
+      >
 
-      <mat-form-field style="padding-top: 0em; margin-top: 0em; width: 9em;">
+      <mat-form-field
+        *ngIf="step == 0"
+        style="padding-top: 0em; margin-top: 0em; width: 9em;"
+      >
         <input
           matInputAutofocus
           matInput
           [disabled]="step > 0"
           [(ngModel)]="serviceName"
           (ngModelChange)="regen()"
-          (keypress)="keyPress($event)" 
+          (keypress)="keyPress($event)"
         />
       </mat-form-field>
     </mat-card-title>
   </mat-card>
   <mat-card style="padding-top: 0; margin-top: 0;" class="mat-card-flat">
+    <!-- Next level cruft alert. Input box adds margin which is not present on steps 1+ -->
+    <br *ngIf="step != 0" />
     <mat-card-title>
       New service
     </mat-card-title>
-    <mat-card-subtitle *ngIf="step == 0">
-      <a routerLink="/settings/token">After logging in</a>, copypaste the
-      following commands into your terminal:
-    </mat-card-subtitle>
-    <mat-card-subtitle *ngIf="step == 3">
-      Start your service with the following command:
-    </mat-card-subtitle>
-    <pre
+
+    <div *ngIf="step == 3">
+
+      <p style="font-weight: 700;">
+        Login in terminal: micro login $token
+        <a
+          style="cursor: pointer"
+          ngxClipboard
+          cbContent="micro login {{ token }}"
+          >(copy)</a
+        >
+      </p>
+      <p>
+        <a routerLink="/settings/tokens">After logging in</a>, start your
+        service with the following command:
+      </p>
+      
+    </div>
+    <div *ngIf="step == 0">
+      <p>
+        Create your service with the following commands:
+      </p>
+
+    </div>
+    <pre class="code-wrapper"
       *ngIf="step == 0"
       style="margin-top: 0.5em;"
-    ><code #inputTarget [highlight]="code" [languages]="languages" [lineNumbers]="false"></code></pre>
-    <pre
+    ><code [highlight]="code" [languages]="languages" [lineNumbers]="false"></code><mat-icon ngxClipboard cbContent="{{code}}" class="copy-icon">file_copy</mat-icon></pre>
+    <pre class="code-wrapper"
       *ngIf="step == 3"
       style="margin-top: 0.5em;"
-    ><code #inputTarget [highlight]="runCode" [languages]="languages" [lineNumbers]="false"></code></pre>
+    ><code [highlight]="runCode" [languages]="languages" [lineNumbers]="false"></code><mat-icon ngxClipboard cbContent="{{runCode}}" class="copy-icon">file_copy</mat-icon></pre>
     <br />
     {{ this.stepLabels[this.step] }}<br /><br />
     <mat-progress-bar
