--- a/web/app/src/app/services/services.component.html
+++ b/web/app/src/app/services/services.component.html
@@ -12,10 +12,11 @@
       &nbsp;
       <button
         routerLink="/service/new"
-        mat-mini-fab
+        mat-raised-button
+        color="primary"
         aria-label="Add new service"
       >
-        <mat-icon>add</mat-icon>
+        <b style="font-weight: 700">New</b>
       </button>
     </mat-card-title>
     <form class="example-form">
