--- a/web/app/src/app/events/events.component.html
+++ b/web/app/src/app/events/events.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="events" style="margin: auto;">
   <mat-card style="margin-top: 0em; padding-top: 0em;" class="mat-card-flat">
     <mat-card-title>
-      events
+      <a routerLink="/services">Services</a> &gt; Events
     </mat-card-title>
     <app-events-list [events]="events"></app-events-list>
     <br />
