--- a/web/app/src/app/new-service/new-service.component.css
+++ b/web/app/src/app/new-service/new-service.component.css
@@ -1,4 +1,24 @@
 .mat-form-field-infix {
-    padding: 0 !important;
-    border: 0;
+  padding: 0 !important;
+  border: 0;
+}
+
+code {
+  padding: 15px !important;
+  font-family: "Source Code Pro" !important;
+  border-radius: 8px;
+  padding-right: 30px !important;
+}
+
+.code-wrapper {
+  position: relative;
+}
+
+.copy-icon {
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  z-index: 1000;
+  color: #f5f5f5;
+  cursor: pointer;
 }
