--- a/web/app/src/app/events-list/events-list.component.html
+++ b/web/app/src/app/events-list/events-list.component.html
@@ -9,20 +9,24 @@
   style="margin-bottom: 1em; background: #f5f5f5;"
 >
   <mat-card-title style="align-items: center; font-size: 1.25em;">
-    <div fxLayout.lt-md="column" fxLayout="row">
-      <div>
-        <a routerLink="/service/{{ event.service.name }}"
-          >{{ event.service.name }}:</a
-        >
-        &nbsp;
-      </div>
-      <div>
-        {{ eventTypeToString(event) }} &nbsp;<span style="color: #555">{{
-          event.timestamp * 1000 | dateAgo
-        }}</span>
-      </div>
-    </div>
+    <a routerLink="/service/{{ event.service.name }}">{{
+      event.service.name
+    }}</a>
+    {{ eventTypeToString(event) }}
   </mat-card-title>
+  <div *ngIf="hasMeta(event)">
+    <span style="color: #555">{{ event.timestamp * 1000 | dateAgo }}</span
+    >&nbsp;
+    <span *ngFor="let meta of visibleMeta(event) | keyvalue; let isLast = last">
+      <span style="color: grey" *ngIf="meta.key == 'commit'">
+        commit:
+        <a href="{{ commitUrl(event) }}">{{ shortHash(meta.value) }}</a></span
+      ><span style="color: grey" *ngIf="meta.key == 'build'">
+        build:
+        <a href="{{ buildUrl(event) }}">{{ meta.value }}</a></span
+      >
+    </span>
+  </div>
 </mat-card>
 
 <div *ngIf="!events || events.length == 0">
