--- a/web/app/src/app/events-list/events-list.component.html
+++ b/web/app/src/app/events-list/events-list.component.html
@@ -18,10 +18,10 @@
     <span style="color: #555">{{ event.timestamp * 1000 | dateAgo }}</span
     >&nbsp;
     <span *ngFor="let meta of visibleMeta(event) | keyvalue; let isLast = last">
-      <span style="color: grey" *ngIf="meta.key == 'commit'">
+      <span style="color: grey" *ngIf="meta.key == 'commit' && meta.value">
         commit:
         <a href="{{ commitUrl(event) }}">{{ shortHash(meta.value) }}</a></span
-      ><span style="color: grey" *ngIf="meta.key == 'build'">
+      ><span style="color: grey" *ngIf="meta.key == 'build' && meta.value">
         build:
         <a href="{{ buildUrl(event) }}">{{ meta.value }}</a></span
       >
