--- a/web/app/src/app/app.component.html
+++ b/web/app/src/app/app.component.html
@@ -22,23 +22,27 @@
         <!-- The following menu items will be hidden on both SM and XS screen sizes -->
         <a routerLink="/services" mat-button>Services</a>
         <a routerLink="/events" mat-button>Events</a>
-        <a href="https://micro.mu/community" mat-button>Community</a>
 
-        <mat-menu #menu="matMenu">
+        <mat-menu [overlapTrigger]="false" xPosition="before" #menu="matMenu">
           <button
             class="tokens"
             id="tokens"
-            style="padding-left: 3em; padding-right: 3em; text-align: center;"
             mat-menu-item
             routerLink="/settings/tokens"
           >
             Settings
           </button>
           <button
+            mat-menu-item
+            (click)="goToTeam()"
+            *ngIf="user && user.teamName && user.teamURL"
+          >
+            {{ user.teamName }}
+          </button>
+          <button
             class="logout"
             id="logout"
             *ngIf="user && user.name"
-            style="padding-left: 3em; padding-right: 3em; text-align: center;"
             mat-menu-item
             (click)="us.logout()"
           >
@@ -53,6 +57,10 @@
             class="dropdown-menu"
             id="dropdown-menu"
           >
+            <img
+              style="vertical-align: middle; margin-right: 0.25em; border-radius: 3px; height: 2em; width: 2em;"
+              src="{{ user.avatarURL }}"
+            />
             {{ user.name }}
             <mat-icon>keyboard_arrow_down</mat-icon>
           </button>
@@ -89,9 +97,13 @@
             >Events</a
           >
         </div>
-        <div><a href="https://micro.mu/community" mat-button>Community</a></div>
         <div *ngIf="user && user.name">
-          <a routerLink="/settings/tokens" (click)="sidenav.toggle()" mat-button>Settings</a>
+          <a routerLink="/settings/tokens" (click)="sidenav.toggle()" mat-button
+            >Settings</a
+          >
+        </div>
+        <div *ngIf="user && user.teamName && user.teamURL">
+          <a (click)="goToTeam()" mat-button>{{ user.teamName }}</a>
         </div>
         <div *ngIf="user && user.name">
           <a (click)="us.logout()" mat-button>Sign out</a>
