--- a/web/app/src/app/app.component.html
+++ b/web/app/src/app/app.component.html
@@ -20,8 +20,8 @@
       <span class="menu-spacer"></span>
       <div style="padding-top: 4px;" fxShow="true" fxHide.lt-md>
         <!-- The following menu items will be hidden on both SM and XS screen sizes -->
-        <a routerLink="/services" mat-button>Services</a>
-        <a routerLink="/events" mat-button>Events</a>
+        <a *ngIf="user && user.teamName" routerLink="/services" mat-button>Services</a>
+        <a *ngIf="user && user.teamName" routerLink="/events" mat-button>Events</a>
 
         <mat-menu id="matmenu" #menu="matMenu">
           <button
@@ -92,27 +92,48 @@
   <mat-sidenav-container>
     <mat-sidenav style="width: 66%;" #sidenav>
       <mat-nav-list>
-        <div><a (click)="sidenav.toggle()" mat-list-item>Close</a></div>
+        <div *ngIf="user && user.teamName" style="margin-bottom: 1em; padding-left: 1em;">
+          <img
+            *ngIf="user.avatarURL"
+            style="vertical-align: middle; margin-right: 0.5em; border-radius: 3px; height: 2em; width: 2em;"
+            src="{{ user.avatarURL }}"
+          />
+          {{ user.name }}
+        </div>
         <div>
-          <a (click)="sidenav.toggle()" routerLink="/services" mat-button
+          <a (click)="sidenav.toggle()" mat-list-item
+            ><mat-icon style="margin-right: 0.15em;">close</mat-icon>Close</a
+          >
+        </div>
+        <div *ngIf="user && user.teamName">
+          <a mat-list-item (click)="sidenav.toggle()" routerLink="/services"
             >Services</a
           >
         </div>
-        <div>
-          <a (click)="sidenav.toggle()" routerLink="/events" mat-button
+        <div *ngIf="user && user.teamName">
+          <a mat-list-item (click)="sidenav.toggle()" routerLink="/events"
             >Events</a
           >
         </div>
+        <div *ngIf="user && user.teamName && user.teamURL">
+          <a mat-list-item (click)="goToTeam()"
+            ><img
+              *ngIf="user.organizationAvatarURL"
+              style="vertical-align: middle; margin-right: 0.5em; border-radius: 3px; height: 2em; width: 2em;"
+              src="{{ user.organizationAvatarURL }}"
+            />{{ user.teamName }}</a
+          >
+        </div>
         <div *ngIf="user && user.name">
-          <a routerLink="/settings/tokens" (click)="sidenav.toggle()" mat-button
+          <a
+            routerLink="/settings/tokens"
+            (click)="sidenav.toggle()"
+            mat-list-item
             >Settings</a
           >
         </div>
-        <div *ngIf="user && user.teamName && user.teamURL">
-          <a (click)="goToTeam()" mat-button>{{ user.teamName }}</a>
-        </div>
         <div *ngIf="user && user.name">
-          <a (click)="us.logout()" mat-button>Sign out</a>
+          <a (click)="us.logout()" mat-list-item>Sign out</a>
         </div>
       </mat-nav-list>
     </mat-sidenav>
